2016-05-26  Stipe Tolj  <stolj at kannel.org>
    * gwlib/dbpool.h: add missing define for Cassandra.
    
2016-05-09  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_smpp.c: relax SMPP DLR scanning for a better pattern match.
    [Msg-Id: <5720AAD1.2000500@kannel.org>]
    
2016-04-14  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: add documentation for escape code '%e'.
    * gw/urltrans.c: add escape code '%e' for printable hexadecimal byte codes.
    
2016-02-15  Stipe Tolj  <stolj at kannel.org>
    * gw/dlr.c: add missing original DLR bit-mask forwarding in case of 
      DLR SMSC[SUCCESS|FAIL] events.
      
2015-12-22 Alexander Malysh <amalysh at kannel.org>
    * gwlib/conn.[ch]: renamed some ssl init functions to be in conn_XXX namespace.
      test/test_http.c: implemented cmd line option to provide CA file.

2015-12-21 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c: fixed MO concatenation handling for rerouting cases.

2015-12-17  Stipe Tolj  <stolj at kannel.org>
    * doc/examples/dlr-mysql.conf: add comment block describing an advanced
      configuraiton for MySQL with scheduled events for DLR table clean-up.
      
2015-12-17  Stipe Tolj  <stolj at kannel.org>
    * doc/examples/dlr-cassandra.conf: example for Cassandra.
    * doc/userguide/userguide.xml: documentation for Cassandra support.
    * gw/dlr_cass.c: adding DLR handling via Cassandra.
    * gw/dlr_p.h: adding dlr_init_cass() prototype.
    * gw/dlr.c: add 'spool = cassandra'.
    * gwlib/cfg.def: adding 'group = cassandra-connection' context.
    * gwlib/dbpool_cass.c: adding Cassandra DBPool support via DataStax C/C++
      Cassandra driver library.
    * gwlib/dbpool.[ch]: include Cassandra handling.
    * test/test_dbpool.c: add Cassandra testing capabilities.
    * configure[.in]: adding --with-cassandra and --with-cassandra-dir
    * gw-config.h.in: define HAVE_CASS
    This patchset adds support for the Apache Cassandra 2.1, 2.2 and 3.0